@@ -1,5 +1,6 @@
 1.1.2 to 1.1.3
 ----------------------------------------------------------------------
+- Fixed a Delete Nodes issues with RTC - Bug 797
 - Added support to build OpenNMS on FreeBSD. Thx Andrei
 - HttpMonitor and HttpsMonitor now use "port" instead of "ports".
   Bug 744
